--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^24.3.0",
     "axios": "^1.11.0",
     "cheerio": "^1.1.2",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "puppeteer": "^24.18.0",
     "ts-node": "^10.9.2",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.35",
+    "@types/cors": "^2.8.19",
     "nodemon": "^3.1.10"
   }
 }
