--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express": "^5.1.0",
     "puppeteer": "^24.18.0",
     "qrcode": "^1.5.4",
+    "sentiment": "^5.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
@@ -29,6 +30,7 @@
     "@types/cheerio": "^0.22.35",
     "@types/cors": "^2.8.19",
     "@types/qrcode": "^1.5.5",
+    "@types/sentiment": "^5.0.4",
     "nodemon": "^3.1.10"
   }
 }
