--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.544.0",
     "motion": "^12.12.1",
     "ogl": "^1.0.11",
     "qrcode": "^1.5.4",
